--- a/CalculadorRutas/views/menu.xml
+++ b/CalculadorRutas/views/menu.xml
@@ -16,7 +16,6 @@
 
 
     <record id="route_calculator_city_action" model="ir.actions.act_window">
-        <!-- <field name="name">Tickets</field> -->
         <field name="res_model">city</field>
         <field name="view_mode">tree,form,pivot,graph</field>
         <!-- <field name="target">new</field> -->
@@ -28,6 +27,19 @@
             parent="route_calculator_menu"
             action="route_calculator_city_action"
             sequence="1" />
+
+    <record id="route_calculator_connection_action" model="ir.actions.act_window">
+        <field name="res_model">connection</field>
+        <field name="view_mode">tree,form,pivot,graph</field>
+        <!-- <field name="target">new</field> -->
+    </record>
+
+    <menuitem 
+            id="calculator_ruta_connection_menu_item_2"
+            name="Connections"
+            parent="route_calculator_menu"
+            action="route_calculator_city_action"
+            sequence="2" />
 
 
 </odoo>
