--- a/CalculadorRutas/views/connection_views.xml
+++ b/CalculadorRutas/views/connection_views.xml
@@ -17,8 +17,9 @@
         <field name="arch" type="xml">
             <tree string="">
                 <field name="name" />
-                 <field name="origin" />
-                  <field name="destination" />
+                <field name="Citys" />
+                <field name="origin" />
+                <field name="destination" />
             </tree>
         </field>
     </record>
