--- a/CalculadorRutas/views/connection_views.xml
+++ b/CalculadorRutas/views/connection_views.xml
@@ -6,7 +6,7 @@
         <field name="model">connection</field>
         <field name="arch" type="xml">
             <tree string="">
-                <field name="name" />
+                <field name="name" String="Type"/>
             </tree>
         </field>
     </record>
