--- a/CalculadorRutas/views/connection_views.xml
+++ b/CalculadorRutas/views/connection_views.xml
@@ -7,6 +7,9 @@
         <field name="arch" type="xml">
             <tree string="">
                 <field name="name" string="Type"/>
+                <field name="citys" />
+                <field name="origin" />
+                <field name="destination" />
             </tree>
         </field>
     </record>
