--- a/CalculadorRutas/views/connection_views.xml
+++ b/CalculadorRutas/views/connection_views.xml
@@ -8,8 +8,8 @@
             <tree string="">
                 <field name="tiype" string="Type"/>
           
-                <field name="origin" />
-                <field name="destination" />
+                <field name="origin" string="Origin"/>
+                <field name="destination" string="Destination" />
             </tree>
         </field>
     </record>
