--- a/CalculadorRutas/views/connection_views.xml
+++ b/CalculadorRutas/views/connection_views.xml
@@ -6,26 +6,13 @@
         <field name="model">connection</field>
         <field name="arch" type="xml">
             <tree string="">
-                <field name="name" />
+                <field name="name" string="Connection" readonly="1" />
                 <field name="type" string="Type"/>
                 <field name="origin" string="Origin"/>
                 <field name="destination" string="Destination" />
-                 <field name="connection" readonly="1" />
+               
             </tree>
         </field>
     </record>
-
-    <!-- <record id="connection_type_view_tree" model="ir.ui.view">
-        <field name="name">connection.type.view.tree</field>
-        <field name="model">connection.type</field>
-        <field name="arch" type="xml">
-            <tree string="">
-                <field name="name" />
-                <field name="citys" />
-                <field name="origin" />
-                <field name="destination" />
-            </tree>
-        </field>
-    </record> -->
 
 </odoo>
