--- a/CalculadorRutas/views/route_calculator.xml
+++ b/CalculadorRutas/views/route_calculator.xml
@@ -7,6 +7,7 @@
         <field name="arch" type="xml">
             <tree string="">
                 <field name="name" />
+                 <field name="connection_ids" />
             </tree>
         </field>
     </record>
