--- a/CalculadorRutas/views/route_calculator.xml
+++ b/CalculadorRutas/views/route_calculator.xml
@@ -6,7 +6,7 @@
         <field name="model">route.calculator</field>
         <field name="arch" type="xml">
             <tree string="">
-                 <field name="connection_ids" />
+                 <field name="route_connection_ids" />
             </tree>
         </field>
     </record>
