--- a/CalculadorRutas/views/connection_views.xml
+++ b/CalculadorRutas/views/connection_views.xml
@@ -15,4 +15,16 @@
         </field>
     </record>
 
+    <record id="connection_type_view_tree" model="ir.ui.view">
+        <field name="name">connection.type.view.tree</field>
+        <field name="model">connection.type</field>
+        <field name="arch" type="xml">
+            <tree string="">
+                <field name="name" />
+                <field name="type" string="Type"/>
+               
+            </tree>
+        </field>
+    </record>
+
 </odoo>
