--- a/CalculadorRutas/views/menu.xml
+++ b/CalculadorRutas/views/menu.xml
@@ -69,7 +69,7 @@
 
 
     <record id="route_calculator_connection_type_action" model="ir.actions.act_window">
-        <field name="res_model">connection.type</field>
+        <field name="res_model">connection</field>
         <field name="view_mode">tree,form,pivot,graph</field>
     </record>
 
