--- a/CalculadorRutas/views/route_calculator.xml
+++ b/CalculadorRutas/views/route_calculator.xml
@@ -11,5 +11,20 @@
             </tree>
         </field>
     </record>
+
+    <record id="route_calculator_view_form" model="ir.ui.view">
+        <field name="name">route.calculator.view.form</field>
+        <field name="model">route.calculator</field>
+        <field name="arch" type="xml">
+            <form string="">
+                <sheet>
+                    <group>
+                        <field name="type_id" string="Connection Type"/>
+                        <field name="connection_id" domain="[('name','=', type_id)]" attrs="{'readonly':[('type_id', '=', False)]}"/>
+                    </group>
+                </sheet>
+            </form>
+        </field>
+    </record>
  
 </odoo>
