--- a/CalculadorRutas/views/route_calculator.xml
+++ b/CalculadorRutas/views/route_calculator.xml
@@ -23,6 +23,12 @@
                         <field name="connection_id" domain="[('type_id','=', type_id)]" attrs="{'readonly':[('type_id', '=', False)]}"/>
                     </group>
                 </sheet>
+
+                    <div class="oe_chatter">
+                    <field name="message_follower_ids"/>
+                    <field name="activity_ids"/>
+                    <field name="message_ids" options="{'post_refresh': 'recipients'}"/>
+                </div>
             </form>
         </field>
     </record>
