--- a/i2t_negative_amounts_credit_note_reports/report/report_invoice.xml
+++ b/i2t_negative_amounts_credit_note_reports/report/report_invoice.xml
@@ -9,12 +9,22 @@
         <xpath expr="//span[@t-field='line.price_subtotal']" position="before">
             <span t-if="negative_symbol">-</span>
         </xpath>
-        <xpath expr="//span[@t-esc='current_subtotal']" position="before">
+        <xpath expr="//span[@t-esc='tax_totals']" position="before">
             <span t-if="negative_symbol">-</span>
         </xpath>
+
+
+
+<!-- 
+
         <xpath expr="//span[@t-field='o.amount_untaxed']" position="before">
             <span t-if="negative_symbol">-</span>
         </xpath>
+ -->
+
+
+
+
         <xpath expr="//t[@t-as='payment_vals']/tr[1]/td[2]/span[1]" position="before">
             <span t-if="negative_symbol">-</span>
         </xpath>
