--- a/i2t_negative_amounts_credit_note_reports/report/report_invoice.xml
+++ b/i2t_negative_amounts_credit_note_reports/report/report_invoice.xml
@@ -9,9 +9,9 @@
         <xpath expr="//span[@t-field='line.price_subtotal']" position="before">
             <span t-if="negative_symbol">-</span>
         </xpath>
-        <xpath expr="//span[@t-esc='tax_totals']" position="before">
+        <!-- <xpath expr="//span[@t-esc='tax_totals']" position="before">
             <span t-if="negative_symbol">-</span>
-        </xpath>
+        </xpath> -->
 
 
 
