--- a/i2t_negative_amounts_credit_note_reports/report/report_invoice.xml
+++ b/i2t_negative_amounts_credit_note_reports/report/report_invoice.xml
@@ -34,9 +34,9 @@
         <!-- <xpath expr="//span[@t-field='o.amount_residual']" position="before">
             <span t-if="negative_symbol">-</span>
         </xpath> -->
-        <xpath expr="//span[@t-esc='amount_by_group[3]']" position="before">
+        <!-- <xpath expr="//span[@t-esc='amount_by_group[3]']" position="before">
             <span t-if="negative_symbol">-</span>
-        </xpath>
+        </xpath> -->
         <xpath expr="//t[@t-as='amount_by_group']" position="attributes">
             <attribute name="t-if">not negative_symbol</attribute>
         </xpath>
