--- a/i2t_negative_amounts_credit_note_reports/report/report_invoice.xml
+++ b/i2t_negative_amounts_credit_note_reports/report/report_invoice.xml
@@ -2,10 +2,23 @@
 <!-- Copyright 2022 Ángel García de la Chica Herrera <angel.garcia@sygel.es>
      License AGPL-3.0 or later (https://www.gnu.org/licenses/agpl). -->
 <odoo>
-    <template id="negative_amounts_credit_note_reports_invoice_document" name="negative.amounts.credit.note.reports.invoice.document" inherit_id="account.report_invoice_document" >
-        <xpath expr="//div[1]/h2" position="before">
-            <t t-set="negative_symbol" t-value="o.move_type == 'out_refund' and o.company_id.negative_amounts_credit_note"/>
+    <template id="negative_amounts_credit_note_reports_invoice_document" name="negative.amounts.credit.note.reports.invoice.document" inherit_id="account.document_tax_totals" >
+       
+       
+       
+       
+        <xpath expr="//span[@t-field='o.amount_residual']" position="before">
+            <span t-if="negative_symbol">-</span>
         </xpath>
+       
+       
+       
+        <!-- <xpath expr="//div[1]/h2" position="before">
+            <t t-set="negative_symbol" t-value="o.move_type == 'out_refund' and o.company_id.negative_amounts_credit_note"/>
+        </xpath> -->
+
+
+
         <xpath expr="//span[@t-field='line.price_subtotal']" position="before">
             <span t-if="negative_symbol">-</span>
         </xpath>
@@ -13,21 +26,16 @@
             <span t-if="negative_symbol">-</span>
         </xpath> -->
 
-
-
 <!-- 
 
         <xpath expr="//span[@t-field='o.amount_untaxed']" position="before">
             <span t-if="negative_symbol">-</span>
         </xpath>
  -->
-
-
-
-
+<!-- 
         <xpath expr="//t[@t-as='payment_vals']/tr[1]/td[2]/span[1]" position="before">
             <span t-if="negative_symbol">-</span>
-        </xpath>
+        </xpath> -->
         <!-- <xpath expr="//span[@t-field='o.amount_total']" position="before">
             <span t-if="negative_symbol">-</span>
         </xpath> -->
@@ -41,7 +49,7 @@
             <attribute name="t-if">not negative_symbol</attribute>
         </xpath> -->
 
-        
+
 <!--        
         <xpath expr="//t[@t-as='amount_by_group']" position="before">
             <t t-foreach="o.amount_by_group" t-as="amount_by_group" t-if="negative_symbol">
