--- a/i2t_negative_amounts_credit_note_reports/report/report_invoice.xml
+++ b/i2t_negative_amounts_credit_note_reports/report/report_invoice.xml
@@ -5,7 +5,7 @@
     <template id="negative_amounts_credit_note_reports_invoice_document" name="negative.amounts.credit.note.reports.invoice.document" inherit_id="account.report_invoice_document" >
        
        
-         <xpath expr="//span[@t-att-class='oe_subtotal_footer_separator']" position="before">
+         <xpath expr="//span[@t-esc=subtotal['formatted_amount']]" position="before">
               <strong>(++)</strong>
         </xpath>
 <!-- 
