--- a/i2t_negative_amounts_credit_note_reports/report/report_invoice.xml
+++ b/i2t_negative_amounts_credit_note_reports/report/report_invoice.xml
@@ -13,8 +13,12 @@
          <xpath expr="//span[@t-att-class='oe_subtotal_footer_separator']" position="before">
               <strong>(menos)</strong>
         </xpath>
-
+<!-- 
         <xpath expr="//span[@t-esc='tax_totals['formatted_amount_total_rounded']']" position="before">
+              <strong>(menos)</strong>
+        </xpath> -->
+
+          <xpath expr="//span[@t-if='formatted_amount_total_rounded']" position="before">
               <strong>(menos)</strong>
         </xpath>
 
