--- a/i2t_negative_amounts_credit_note_reports/report/report_invoice.xml
+++ b/i2t_negative_amounts_credit_note_reports/report/report_invoice.xml
@@ -13,17 +13,21 @@
          <xpath expr="//span[@t-att-class='oe_subtotal_footer_separator']" position="before">
               <strong>(menos)</strong>
         </xpath>
+
+        <xpath expr="//span[@t-esc='tax_totals[\'formatted_amount_total\']']" position="before">
+              <strong>(menos)</strong>
+        </xpath>
 <!-- 
         <xpath expr="//span[@t-esc='tax_totals['formatted_amount_total_rounded']']" position="before">
               <strong>(menos)</strong>
         </xpath> -->
 
-          <xpath expr="//span[t-esc='tax_totals['formatted_amount_total_rounded']']" position="after">
+        <!-- <xpath expr="//span[t-esc='tax_totals['formatted_amount_total_rounded']']" position="before">
               <strong>(menos)</strong>
-        </xpath>
+        </xpath> -->
 
 <!-- <xpath expr="//span[t-esc='tax_totals['formatted_amount_total_rounded']']" position="after">
-    <!-- Tu nuevo contenido aquí -->
+    <!Tu nuevo contenido aquí 
     <span t-esc="tu_nueva_expresion" t-if="tu_condicion"/>
 </xpath> -->
 
