--- a/i2t_negative_amounts_credit_note_reports/report/report_invoice.xml
+++ b/i2t_negative_amounts_credit_note_reports/report/report_invoice.xml
@@ -16,12 +16,13 @@
 
       
 
-        <div t-if="tax_totals['formatted_amount_total']" position="replace">
-            <span t-esc="tax_totals['formatted_amount_total']"/>
-            <strong>(-)</strong>
-        </div>
+        <t t-extend="account.document_tax_totals">
+            <!-- Tu código de extensión aquí -->
+            <xpath expr="//span[@t-esc='tax_totals[&quot;formatted_amount_total&quot;]']" position="after">
+                <strong>(-)</strong>
+            </xpath>
+        </t>
 
-        
             <!-- <xpath expr="//span[contains(@t-esc, 'tax_totals[\'formatted_amount_total\']')]"  position="before">
                 <strong>(menos)</strong>
             </xpath> -->
