--- a/i2t_negative_amounts_credit_note_reports/report/report_invoice.xml
+++ b/i2t_negative_amounts_credit_note_reports/report/report_invoice.xml
@@ -14,7 +14,7 @@
               <strong>(menos)</strong>
         </xpath>
 
-      <xpath expr="//td[hasclass('text-end')]/[3]" position="after"/>
+      <xpath expr="//td[hasclass('text-end')]/[3]" position="after">
           <strong>(-)</strong>
     </xpath>
       
